Fixed stupid little font rules overlap with a.remove

--- a/app/assets/stylesheets/screen/clients.sass
+++ b/app/assets/stylesheets/screen/clients.sass
@@ -103,6 +103,7 @@ ul.clients
 						color: #fff
 						@include background(#8b7 linear-gradient(top,#6a5,#8c7))
 				&.remove
+					font-size: 1em
 					float: right
 					color: #c65
 					border-color: #c65
